      Closes: #762715
  * bts:
    + Add list of tags to documentation.  Closes: #883658

  [ James McCoy ]
  * grep-excuses:
    + Show when dependencies are blocking the migration.  (Closes: #881906)

  [ Antonio Terceiro ]
  * uscan:
    + decode HTTP responses, to support pages that are served encoded with
      gzip (`Content-Encoding: gzip`)

 -- Mattia Rizzolo <mattia@debian.org>  Mon, 30 Oct 2017 07:48:10 +0100

devscripts (2.17.11) unstable; urgency=medium

  [ James McCoy ]
  * Remove myself from Uploaders.

  [ Osamu Aoki ]
  * debuild:
    + Support newer and long dpkg-buildpackage options --no-sign,
      --unsigned-source, --unsigned-changes, -ui and --unsigned-buildinfo,
      therefore bumping the dpkg-dev dependency to version to 1.18.19.
      Closes: #876024
  * debian/control:
    + Remove Martin Zobel-Helas, Patrick Schoenfeld and Benjamin Drung
      from Uploaders after asking them.
      Thanks for all your contributions!
  * uscan:
    + Auto set --force-download when appropriate to retain the
      previous behaviour.
    + Correct information about the OpenPGP key fingerprints.  Closes: #877104

  [ Chris Lamb ]
  * reproducible-check:
    + Match name of the json file on remote server.
    + Use the restricted JSON file that hides transient issues.  Closes: #875861
    + Handle multi-architecture systems.  Closes: #875887
    + Expire cache file after 1 day and base local cache name on the
      remote filename.
    + Various flake8-related tidyintidying.
  * debian/control:
    + Mention reproducible-check in the package long description.
  * debchange:
    + Add support for preparing uploads to stable with the new --stable flag.
      Closes: #871657

  [ Christoph Berg ]
  * origtargz:
    + Allow invocation from subdirectory.  Closes: #702636

  [ Cyril Brulebois ]
  * debsign:
    + Fix bash completion by using file extensions instead of
      using globs.  Closes: #877440

  [ Mattia Rizzolo ]
  * debchange: